fix: 코드 리뷰 지적사항 수정 (PR #6)
- ENTITY_NOT_FOUND 상태코드 400 -> 404 수정
- SETTLEMENT_ALREADY_COMPLETED(409) 에러코드 추가
- jakarta.transaction.Transactional -> spring @Transactional 통일
- completeSettlement 가드: blocklist(COMPLETED만 차단) -> allowlist(READY만 허용)
- completeSettlement 에러코드: INVALID_INPUT_VALUE -> SETTLEMENT_ALREADY_COMPLETED
- runSettlement(): idempotency 체크 및 null totalPrice 방어 추가
- Collectors.toList() -> .toList() (Java 16+)
- SettlementRepository java.util.Optional/List FQN -> import 정리
- SettlementEntity.orderId unique=true 추가

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>